--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -28,8 +28,8 @@ jobs:
 
       - name: Build release distributions
         run: |
-          python -m pip install setuptools
-          python -m pip install twine
+          pip install setuptools
+          pip install twine
           python python setup.py sdist
 
       - name: Upload distributions
