--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -26,11 +26,16 @@ jobs:
         with:
           python-version: "3.x"
 
-      - name: Build release distributions
-        run: |
-          pip install setuptools
-          pip install twine
-          python python setup.py sdist
+      - name: Instal setuptools
+        run: pip install setuptools
+
+      - name: Instal twine
+        run: pip install twine
+
+      - name: Build
+        run: python python setup.py sdist
+          
+          
 
       - name: Upload distributions
         uses: actions/upload-artifact@v4
